# test_0927

./: pyproject.toml
.research/: research_history.json
.research/latex/agents4science_2025/: paper.tex
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: derive_specific_experiments_exp-1-main-ablation.txt  derive_specific_experiments_exp-1-main-perf-eff.txt  derive_specific_experiments_exp-1-main-performance.txt  derive_specific_experiments_exp-2-generalisation-robustness.txt  derive_specific_experiments_exp-2-robust-ablation.txt  derive_specific_experiments_exp-2-robustness-efficiency.txt  derive_specific_experiments_exp-main-perf-ablation.txt  derive_specific_experiments_exp-robustness-transfer-efficiency.txt  generate_base_code.txt  validate_base_code.txt  validate_experiment_code_exp-1-main-ablation.txt  validate_experiment_code_exp-1-main-perf-eff.txt  validate_experiment_code_exp-1-main-performance.txt  validate_experiment_code_exp-2-generalisation-robustness.txt  validate_experiment_code_exp-2-robust-ablation.txt  validate_experiment_code_exp-2-robustness-efficiency.txt  validate_experiment_code_exp-main-perf-ablation.txt  validate_experiment_code_exp-robustness-transfer-efficiency.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_strategy.txt  generate_experiments.txt
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+16 files in other folders)
