[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "boil-sacc-framework"
version = "0.1.0"
description = "BOIL + SACC unified experimentation framework"
requires-python = ">=3.10"
authors = [
    { name = "Research Automation", email = "research@example.com" }
]
license = { text = "Apache-2.0" }

[project.dependencies]
torch = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
pyyaml = "*"
tqdm = "*"
scikit-learn = "*"
scipy = "*"
gym = "*"
