[project]
name = "tw_byol_experiments"
version = "0.1.0"
description = "Time-Weighted BYOL experimental codebase"
requires-python = ">=3.9"

[project.dependencies]
torch = ">=2.0.0"
torchvision = ">=0.15.0"
pyyaml = "^6.0"
tqdm = "^4.66.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
pytorchvideo = "^0.1.5"